# SQIREL

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  shell.nix  tests.nix
.github/workflows/: build-library.yml  build.yml  main.yml  release.yml  test.yml
CMakeModules/: CodeCoverage.cmake
include/: sqirel.h  sqirel_keys.h  sqirel_quantum.h  sqirel_types.h  squirrel.h  squirrel_constructors.h  squirrel_consumer.h  squirrel_init.h  squirrel_key.h  squirrel_keyboard.h  squirrel_keymap.h  squirrel_keys.h  squirrel_quantum.h  squirrel_split.h  squirrel_types.h
src/: main.c  sqirel.c  sqirel_keys.c  sqirel_quantum.c  squirrel.c  squirrel_constructors.c  squirrel_consumer.c  squirrel_init.c  squirrel_key.c  squirrel_keyboard.c  squirrel_keymap.c  squirrel_keys.c  squirrel_quantum.c  squirrel_split.c  usb_descriptors.c
src/tinyusb/: usb_descriptors.c
tests/: CMakeLists.txt  consumer_activate_deactivate_get_consumer_code.c  consumer_press_release.c  key.c  keyboard_activate_deactivate_get_modifier.c  keyboard_activate_deactivate_keycode.c  keyboard_get_keycodes.c  keyboard_modifier_press_release.c  keyboard_press_release.c  keymap.c  layer_press_release.c  multikey.c  quantum_passthrough_press_release.c  test1.c
